Bug fixes for Data file upload

--- a/public/patient-registration.html
+++ b/public/patient-registration.html
@@ -74,15 +74,9 @@
                     <label>
                       <input id="consent" type="checkbox" onclick="onClickHandler()" />
                       <span>
-                        <p>I voluntarily consent to take part in this research study. I have fully discussed and
-                          understood the purpose and procedures of this study. This study has been explained to me in a
-                          language that I understand. I have been given enough time to ask any questions that I have
-                          about the study, and all my questions have been answered to my satisfaction. I have also been
-                          informed and understood the procedures available and their possible benefits and risks.</p>
+                        <p>I voluntarily consent to take part in this research study. I have fully discussed and understood the purpose and procedures of this study. This study has been explained to me in a language that I understand. I have been given enough time to ask any questions that I have about the study, and all my questions have been answered to my satisfaction. I have also been informed and understood the procedures available and their possible benefits and risks.</p>
                         <br />
-                        <p>By agreeing to participate in this trial, I agree to provide breath samples and access to my
-                          test results for COVID-19 and other respiratory diseases as long as the results are used only
-                          in the COVID-19 Breathalyzer Trial.</p>
+                        <p>By agreeing to participate in this study, I agree to provide breath samples and access to my test results and other respiratory diseases as long as the results are used only in this study.</p>
                       </span>
                     </label>
                     <button class="waves-effect waves-dark btn grey darken-3 validate" type="button" id="submit"
