added FAQs in privacypolicy

--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -177,6 +177,44 @@
 </div>
 </section>
 
+<section>
+<h2>Frequently Asked Questions (FAQs)</h2>
+<h3> Who are we?</h3>
+<p>We are HealthX. We provide digital health solutions which focus on improving the quality of outcomes of care and service. We combine cutting edge technology, insight-rich data and human expertise to transform patient experience. You can find out more about us here: <a href="https://www.healthx.global/">https://www.healthx.global/</a></p>
+<h3>What is TracieX about?</h3>
+<p>The TracieX mobile app helps users register for the TracieX breathalyser test. This test has been developed by Silver Factory Technology (<a href="https://silverfactorytechnology.com/traciex">https://silverfactorytechnology.com/traciex</a>). The app notifies users about their results as well. 
+TracieX is also used by the administrators and staff members of organizations that wish to administer the breathalyzer test in order to determine if it is safe for users to enter their premises. Staff members use the app to view upcoming appointments at their assigned location, scan users’ QR codes and pair them with the barcodes attached to every swab kit.
+The TracieX app is available for download in Google Play Store and Apple’s App Store.</p>
+<h3>What permissions does the app ask for?</h3>
+<p>Following are the permissions needed by the app:</p>
+<ul>
+    <li>Camera: Needed by staff to scan QR codes and Barcodes.</li>
+    <li>Photo library: Access needed if a user would like to upload a profile image.</li>
+    <li>TouchID/FaceID: For iOS only. This protects the user data and results stored inside the app</li>
+</ul>
+<h3>Are these permissions required or optional?</h3>
+<p>Access to camera and enabling TouchID/FaceID is required.</p>
+<p>Photo library access is optional.</p>
+<h3>What personal information does the app require?</h3>
+<p>User can register themselves and other users (family or otherwise) by providing the following information for each person:<p>
+<ul>
+    <li>Name</li>
+    <li>Passport details</li>
+    <li>Birthdate</li>
+    <li>Nationality</li>
+</ul>
+<p>All of the above data is collected to generate a QR code for a user. This is scanned by staff and paired with the barcode of the testing kit assigned to the user. It also records the test results.</p>
+<h3>Is any of this data shared with any other parties?</h3> 
+<p>No</p>
+<h3>Apart from the permissions already described, what other disclosures and user consent steps does the app contain?</h3>
+<p>TracieX’s data privacy policy is explained in detail in the section above.</p>
+<p>The user is asked for their consent related to the test procedure before registering themselves for a test in the app. Staff members are directed to thoroughly explain the test process to the user before administering the test. The consent form can be viewed at the bottom of the registration form in the Registration section of the app.</p>
+<h3>Is this app authorized to provide COVID-19 related services?</h3>
+<p>No, this app simply helps users to register themselves, schedule a test and view their test results. Actual COVID-19 testing is not within the functionality of this application.</p>
+
+
+</section>
+
 
 <footer>
 <div class="container">
